# ImageRetrieval

./: CMakeLists.txt  CombinedImagePreprocessor.cpp  CombinedImagePreprocessor.hpp  DerotationImagePreprocessor.cpp  DerotationImagePreprocessor.hpp  FeatureExtractor.hpp  ImageDB.cpp  ImageDB.hpp  ImagePreprocessor.hpp  IndexInfo.cpp  IndexInfo.hpp  MedianImagePreprocessor.cpp  MedianImagePreprocessor.hpp  README.md  StripeRemovalPreprocessor.cpp  StripeRemovalPreprocessor.hpp  SurfFeatureExtractor.cpp  SurfFeatureExtractor.hpp  main.cpp
